--- a/nowa lekcja/static/css/style.css
+++ b/nowa lekcja/static/css/style.css
@@ -16,3 +16,14 @@ button{
 #tiLogin{
     background-color: brown;
 }
+#root *{
+    position: relative;
+    z-index: 0;
+}
+.curtain{
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0, 255, 0);
+    z-index: 10;
+}
